--- a/config.yml
+++ b/config.yml
@@ -14,4 +14,4 @@ messages:
   isNowAfk: '&8[!] &r%playername% is now AFK.'
   noLongerAfk: '&8[!] &r%playername% is no longer AFK.'
   tabListTag: '%playername% &8AFK'
-  noPermission: '&cError: &rYou do not have permission to do that.'
+  noPermission: 'You do not have permission to do that.'
