--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -11,6 +11,10 @@ announceWhenKickingPlayers: true
 announcePlayerNowAfk: true
 # Should the plugin broadcast a message when a player is no longer idle?
 announcePlayerNoLongerAfk: true
+# Commands that will not remove AFK status from a player
+ignoredCommands:
+    - '/msg'
+    - '/vanish'
 messages:
   announcementToServer: '&c[Notice] &7All AFK players have been kicked due to poor server performance.'
   messageToKickedPlayers: 'All AFK players have been kicked due to poor server performance.'
@@ -19,4 +23,5 @@ messages:
   noLongerAfk: '&8[!] &r%playername% is no longer AFK.'
   tabListTag: '%playername% &8AFK'
   noPermission: '&cYou do not have permission to do that.'
-  noPlayersAreAFK: 'There are no AFK players at the moment.'
+  noPlayersAreAfk: 'There are no AFK players at the moment.'
+  thesePlayersAreAfk: 'The following players are currently AFK:'
