--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -1,34 +1,43 @@
 # The amount of time in minutes a player must be away before being marked as AFK
 afkTime: 5
-# The delay in seconds before a "player is now AFK/no longer AFK" message is sent
-delayBeforeAfkStatusAnnounced: 2
-# The delay in milliseconds before the /afk kickall command kicks all players. Set to 0 to disable this
-kickAllCommandDelay: 1200
+
+# The delay in seconds before the /afk kickall command kicks all players. Set to 0 to disable this.
+# If set above 0, the "kickAllPlayersWarning" message will display before players are kicked
+kickAllCommandDelay: 2
+
 # Should players be automatically kicked after a set period of time?
-autoKickEnabled: true
+autoKickEnabled: false
+
+# Should we warn the player before they're automatically kicked?
+shouldWarnPlayersBeforeAutoKick: true
+
 # Time in minutes before a player is automatically kicked
 timeBeforeAutoKick: 60
-# Should the console be notified when a player's AFK status changes?
-consoleNotifications: true
+
 # Should the tablist be modified to display AFK players? Set this to false
 # if another plugin is modifying your tablist.
-displayTabListTag: true
-# Should the plugin broadcast a message when kicking all AFK players?
+shouldDisplayTabListTag: true
+
+# Should the plugin broadcast a message when the /afk kickall command is ran?
 announceWhenKickingPlayers: true
+
 # Should the plugin broadcast a message when a player goes idle?
 announcePlayerNowAfk: true
+
 # Should the plugin broadcast a message when a player is no longer idle?
 announcePlayerNoLongerAfk: true
+
 # Commands that will not remove AFK status from a player
 ignoredCommands:
     - '/msg'
     - '/vanish'
+    -
 messages:
-  kickAllCommandMessage: '&c[Notice] &7All AFK players have been manually kicked.'
-  kickAllPlayersWarning: '&c[Notice] &7All AFK players will be kicked from the server in <minutes> minutes.'
-  messageToKickedPlayers: 'All AFK players have been manually kicked.'
+  kickAllCommandMessage: '&c[Notice] &rAll AFK players have been kicked.'
+  kickAllPlayersWarning: '&c[Notice] &rAll AFK players will be kicked from the server in <minutes> minutes.'
+  messageToKickedPlayers: 'All AFK players have been kicked.'
   youHaveBeenAutoKicked: 'You were idle for too long and have been kicked.'
-  autoKickAnnounce: '&c[Notice] &7%playername% was idle for too long and has been kicked.'
+  autoKickAnnounce: '&c[Notice] &r%playername% was idle for too long and has been kicked.'
   markedYourselfAfk: 'You marked yourself as AFK.'
   isNowAfk: '&8[!] &r%playername% is now AFK.'
   noLongerAfk: '&8[!] &r%playername% is no longer AFK.'
@@ -36,3 +45,4 @@ messages:
   noPermission: '&cYou do not have permission to do that.'
   noPlayersAreAfk: 'There are no AFK players at the moment.'
   thesePlayersAreAfk: 'The following players are currently AFK:'
+  youAreAboutToBeKicked: '&c[Notice] &rYou have been idle for too long and are about to be kicked.'
