Added metrics, updater

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -48,3 +48,9 @@ messages:
   noPlayersAreAfk: 'There are no AFK players at the moment.'
   thesePlayersAreAfk: 'The following players are currently AFK:'
   youAreAboutToBeKicked: '&c[Notice] &rYou are about to be kicked for idling for too long.'
+
+# bStats metrics
+metrics: true
+
+# Updater
+updater: true
